[package]
name = "polymesh-compliance-tool"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
log = "0.4.6"
env_logger = "0.6.1"
hex = "0.3.2"
secp256k1 = "0.13.0"
rand = "0.6.5"
sha3 = "0.8.2"
parity-codec = {version = "3.2", features = ["derive"] }
substrate-primitives = { git = 'https://github.com/paritytech/substrate.git', rev = '14bc1b40b66ee66beb53efa65cbb25c89e90fc31' }
